# rl_sar_quad

./: README.md
src/rl_sar/: CMakeLists.txt
src/rl_sar/config/: a1_joint_info_plotjuggler_config.xml  tron1_joint_info_plotjuggler_config.xml
src/rl_sar/include/: rl_sim.hpp  rl_sim_a1.hpp  rl_sim_tron1.hpp
src/rl_sar/launch/: gazebo_a1_isaacgym.launch  gazebo_tron1_isaacgym.launch  rviz_a1.launch
src/rl_sar/models/a1_isaacgym/: config.yaml  config.yaml.bak.yaml  config.yaml.himloco  policy.pt  policy_flat.pt  policy_himloco.pt
src/rl_sar/models/a1_isaacsim/: config.yaml.ori  policy_flat_handstand.pt
src/rl_sar/models/tron1_isaacgym/: config.yaml  policy_1.pt
src/rl_sar/scripts/: actuator_net.py  observation_buffer.py  rl_sdk.py  rl_sim.py
src/rl_sar/src/: rl_sim.cpp  rl_sim_a1.cpp  rl_sim_tron1.cpp
src/robot_msgs/: CMakeLists.txt
src/robot_msgs/msg/: A1JointPos.msg  IMU.msg  RobotCommand.msg  RobotState.msg
src/robots/a1_description/: package.xml
src/robots/a1_description/launch/: check_joint.rviz  rviz_display.launch
src/robots/tron1_description/: CMakeLists.txt  package.xml
src/robots/tron1_description/config/: robot_control.yaml
src/robots/tron1_description/launch/: check_joint.rviz  rviz_display.launch  tron1_rviz.launch
src/robots/tron1_description/urdf/: robot.urdf
src/robots/tron1_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro  ros2_control_interface.xacro  transmission.xacro
