<?xml version="1.0"?>
<package format="2">
    <name>tron1_description</name>
    <version>0.0.0</version>
    <description>The tron1_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
